<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="fr.univpau.kayu.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="fr.univpau.kayu.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="fr.univpau.kayu.ui.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/title_settings"/>

</navigation>