<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/productImageRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@android:color/white"
        android:maxWidth="75dp"
        android:maxHeight="75dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:contentDescription="@string/productThumbnailDescription"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDescriptionRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_ean"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/leftArrowDescription"
        app:srcCompat="@drawable/ic_right_arrow_green_24dp" />
</LinearLayout>